@@ -2,6 +2,7 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.3.2
 
+ * kdump: improve message when service fails, rhbz#1248010.
 
 2015-01-15 - Version 1.3.1
 
